fix slider overflow-y

--- a/src/components/Commons/WideSlider/styles.css
+++ b/src/components/Commons/WideSlider/styles.css
@@ -16,6 +16,7 @@
 
 .no-scroll-bar {
   overflow-x:scroll;
+  overflow-y:hidden;
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
 }
